--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        postgres_version: [15, 16, 17]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,10 +32,51 @@ jobs:
           string: ${{ github.repository }}
 
       - name: Build
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           push: true
+          build-args: |
+            POSTGRES_VERSION=${{ matrix.postgres_version }}
           tags: |
             ${{ steps.name.outputs.lowercase }}:latest
-            ${{ steps.name.outputs.lowercase }}:${{ github.event.release.name }}
+            ${{ steps.name.outputs.lowercase }}:${{ github.event.release.name }}-pg${{matrix.postgres_version}}
           platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  build-latest:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Generate image identifier
+        id: name
+        uses: ASzc/change-string-case-action@v5
+        with:
+          string: ${{ github.repository }}
+
+      - name: Build
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          build-args: |
+            POSTGRES_VERSION=17
+          tags: |
+            ${{ steps.name.outputs.lowercase }}:latest
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
